// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProseImage Cloudinary + Unsplash 1`] = `
<figure>
  <div
    class="ar mx-auto"
    style="--w: 800; --h: 600; max-width: 400px;"
  >
    <div
      class="ar-media"
    >
      <img
        alt="description"
        class="rounded-lg"
        loading="lazy"
        sizes="(min-width: 640px) 660px, (min-width: 1024px) 740px, (min-width: 1280px) 820px, (min-width: 1536px) 1000px, calc(100vw - (1rem * 2))"
        src="https://res.cloudinary.com/silvenon/image/upload/c_limit,w_1024/1_zs1MOwXPd-FcxoQ5RIMvyw_t3axyl"
        srcset="https://res.cloudinary.com/silvenon/image/upload/c_limit,w_640/1_zs1MOwXPd-FcxoQ5RIMvyw_t3axyl 640w, https://res.cloudinary.com/silvenon/image/upload/c_limit,w_768/1_zs1MOwXPd-FcxoQ5RIMvyw_t3axyl 768w, https://res.cloudinary.com/silvenon/image/upload/c_limit,w_800/1_zs1MOwXPd-FcxoQ5RIMvyw_t3axyl 800w"
      />
    </div>
  </div>
  <figcaption>
    Photo by
     
    <a
      href="https://unsplash.com/@silvenon?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText"
    >
      silvenon
    </a>
     
    on
     
    <a
      href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
    >
      Unsplash
    </a>
  </figcaption>
</figure>
`;

exports[`ProseImage Cloudinary 1`] = `
<div
  class="ar mx-auto"
  style="--w: 800; --h: 600; max-width: 400px;"
>
  <div
    class="ar-media"
  >
    <img
      alt="description"
      class="rounded-lg"
      loading="lazy"
      sizes="(min-width: 640px) 660px, (min-width: 1024px) 740px, (min-width: 1280px) 820px, (min-width: 1536px) 1000px, calc(100vw - (1rem * 2))"
      src="https://res.cloudinary.com/silvenon/image/upload/c_limit,w_1024/1_zs1MOwXPd-FcxoQ5RIMvyw_t3axyl"
      srcset="https://res.cloudinary.com/silvenon/image/upload/c_limit,w_640/1_zs1MOwXPd-FcxoQ5RIMvyw_t3axyl 640w, https://res.cloudinary.com/silvenon/image/upload/c_limit,w_768/1_zs1MOwXPd-FcxoQ5RIMvyw_t3axyl 768w, https://res.cloudinary.com/silvenon/image/upload/c_limit,w_800/1_zs1MOwXPd-FcxoQ5RIMvyw_t3axyl 800w"
    />
  </div>
</div>
`;

exports[`ProseImage Unsplash 1`] = `
<figure>
  <img
    alt="description"
    class="rounded-lg"
    src="/hello-world.jpg"
  />
  <figcaption>
    Photo by
     
    <a
      href="https://unsplash.com/@silvenon?utm_source=unsplash&amp;utm_medium=referral&amp;utm_content=creditCopyText"
    >
      silvenon
    </a>
     
    on
     
    <a
      href="https://unsplash.com/?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText"
    >
      Unsplash
    </a>
  </figcaption>
</figure>
`;

exports[`ProseImage plain 1`] = `
<img
  alt="description"
  class="rounded-lg"
  src="/hello-world.jpg"
/>
`;
